--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Connor's Website</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <h1 class="header">Hello!</h1>
+        <h2 class="header">Welcome to the landing page for my Intonation Trainer project!</h2>
+        <p>I like monkeys</p>
+        <button id="monkey-button">Click for cute animal</button>
+        <img src="Monkey.jpg" id="Monkey" class="hidden" style="display:none"/>
+        <script src="script.js"></script>
+    </body>
+</html>
